{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 56,
  "lineage": "dd466125-0222-e1a9-77b5-957198d8e3a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03f116312101ec2ce",
            "domain": "vpc",
            "id": "eipalloc-09b147181492f4034",
            "instance": "i-0c4a020d5ffb80296",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0e6a95dff124937ad",
            "private_dns": "ip-172-31-24-58.eu-west-1.compute.internal",
            "private_ip": "172.31.24.58",
            "public_dns": "ec2-34-254-24-165.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.24.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cbf3ef731fc5b7e2",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-243-65-141.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.243.65.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:797416694057:loadbalancer/my-first-elb-using-terraform",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b",
              "eu-west-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "my-first-elb-using-terraform-2109632822.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-first-elb-using-terraform",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-first-elb-using-terraform",
            "security_groups": [
              "sg-0d19a8fe43deebffe"
            ],
            "source_security_group": "797416694057/default_elb_ad2ad24e-cdda-3b94-981f-c9192f2d6b97",
            "source_security_group_id": "sg-0d19a8fe43deebffe",
            "subnets": [
              "subnet-1086de4a",
              "subnet-b45c42d2",
              "subnet-d11cf29a"
            ],
            "tags": {
              "Name": "my-first-elb-using-terraform"
            },
            "tags_all": {
              "Name": "my-first-elb-using-terraform"
            },
            "zone_id": "Z32O12XQLNTSW2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:797416694057:instance/i-0b23bc19fdef848f9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b23bc19fdef848f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7b707aa83f42cde",
            "private_dns": "ip-172-31-9-70.eu-west-1.compute.internal",
            "private_ip": "172.31.9.70",
            "public_dns": "ec2-54-194-7-137.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.7.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-097e656135ee7534c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b45c42d2",
            "tags": {
              "Name": "my-first-dev-instance"
            },
            "tags_all": {
              "Name": "my-first-dev-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-f8c69aa9"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:797416694057:instance/i-06970719d569f96f5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06970719d569f96f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0724ec348a97510ca",
            "private_dns": "ip-172-31-29-12.eu-west-1.compute.internal",
            "private_ip": "172.31.29.12",
            "public_dns": "ec2-54-194-137-11.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.137.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008a2d9df09282463",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d11cf29a",
            "tags": {
              "Name": "my-first-instance"
            },
            "tags_all": {
              "Name": "my-first-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-f8c69aa9"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_first_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:797416694057:instance/i-0c4a020d5ffb80296",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4a020d5ffb80296",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e6a95dff124937ad",
            "private_dns": "ip-172-31-24-58.eu-west-1.compute.internal",
            "private_ip": "172.31.24.58",
            "public_dns": "ec2-34-254-24-165.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.24.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06cea59d61049361c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d11cf29a",
            "tags": {
              "Name": "my-first-reference-instance"
            },
            "tags_all": {
              "Name": "my-first-reference-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-f8c69aa9"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_local_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:797416694057:instance/i-0b58fa7df36465e91",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b58fa7df36465e91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e36c4d19559e283",
            "private_dns": "ip-172-31-35-85.eu-west-1.compute.internal",
            "private_ip": "172.31.35.85",
            "public_dns": "ec2-52-208-149-4.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.149.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05cea1f4e85167ba5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1086de4a",
            "tags": {
              "Owner": "DevOps Team",
              "service": "frontend"
            },
            "tags_all": {
              "Owner": "DevOps Team",
              "service": "frontend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-f8c69aa9"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_first_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:797416694057:security-group/sg-00aee19eabc23fbc4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00aee19eabc23fbc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.254.24.165/32"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my_first_sg",
            "name_prefix": "",
            "owner_id": "797416694057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-6ab41913"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "variable_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:797416694057:security-group/sg-02ad5c13dc54f658b",
            "description": "Creating first variable in terraform ",
            "egress": [],
            "id": "sg-02ad5c13dc54f658b",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.50/32"
                ],
                "description": "Allow http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.1.50/32"
                ],
                "description": "Allow https port",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.1.50/32"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "variable_demo",
            "name_prefix": "",
            "owner_id": "797416694057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "variable_demo"
            },
            "tags_all": {
              "Name": "variable_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-6ab41913"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}